--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "simsmology",
   "private": true,
   "scripts": {
     "dev": "vite --port 3333 --open",
@@ -26,6 +27,8 @@
     "@vue/server-renderer": "^3.1.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
+    "fs-extra": "^10.0.0",
+    "gray-matter": "^4.0.3",
     "https-localhost": "^4.6.5",
     "markdown-it-link-attributes": "^3.0.0",
     "markdown-it-prism": "^2.1.6",
@@ -34,11 +37,12 @@
     "vite": "^2.3.8",
     "vite-plugin-components": "^0.11.2",
     "vite-plugin-icons": "^0.6.3",
+    "vite-plugin-markdown": "^2.0.2",
     "vite-plugin-md": "^0.6.7",
-    "vite-plugin-pages": "^0.13.2",
+    "vite-plugin-pages": "^0.14.1",
     "vite-plugin-pwa": "^0.8.1",
     "vite-plugin-vue-layouts": "^0.3.1",
-    "vite-plugin-windicss": "^1.1.0",
+    "vite-plugin-windicss": "^1.1.1",
     "vite-ssg": "^0.11.4",
     "vue-tsc": "^0.2.0"
   }
